# hermetic-data-pipeline

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
api/: Dockerfile  requirements.txt
api/app/: main.py
api/app/core/: config.py
api/app/models/: schemas.py
api/app/routers/: chat.py
api/app/services/: rag_chain.py  vector_store.py
config/: airflow_connections.json  spark_defaults.conf
crawler/: Dockerfile  requirements.txt  scrapy.cfg
crawler/scrapy_spider/: items.py  middlewares.py  pipelines.py  settings.py
crawler/scrapy_spider/spiders/: wiki_spider.py
dags/: postgres_incremental_dag.py  spark_iceberg_merge_dag.py  xcom_optimization_dag.py
deploy/: docker_export.sh  kerberos_setup.md  offline_packages.sh  ssl_proxy_config.py
docs/: architecture.html  progress.html
ingestion/: async_collector.py  dedup_processor.py
scripts/: init_iceberg_catalog.py
spark/jobs/: compaction_optimization.py  hive_to_iceberg_migration.py  iceberg_schema_evolution.py  time_travel_recovery.py
tests/: conftest.py  e2e_pipeline_test.py
